<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CustomerSc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpAdminScreen">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/customer_sign_up"
        style="@style/CustomTextStyle"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/PhoneNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LastName"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_phone_number"
        android:inputType="phone" />

    <EditText
        android:id="@+id/adminemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/PhoneNum"
        android:layout_marginStart="20dp"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/enter_e_mail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/FirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="180dp"
        android:ems="10"
        android:hint="@string/enter_first_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/LastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/FirstName"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/enter_last_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/edtTxtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/adminemail"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="numberPassword" />

    <Button
        android:id="@+id/btncustomerSignUp"
        style="@style/CustomButton"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtTxtPassword"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:text="@string/sign_up" />


</RelativeLayout>