<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CustomerSc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminScreen">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        style="@style/CustomTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/customer_screen" />

    <EditText
        android:id="@+id/edtTxtID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/enter_id_number"
        android:inputType="phone"
        tools:ignore="TextFields"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edtTxtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtTxtID"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/enter_password2"
        android:inputType="numberPassword"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnCustomerLogin"
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtTxtPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        style="@style/CustomButton"
        android:text="@string/login" />

    <TextView
        android:id="@+id/textView4"
        style="@style/CustomTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnCustomerLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="Or, If you do not have an account"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btncustomerSignUp"
        style="@style/CustomButton"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up1" />

</RelativeLayout>
