<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/carView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CarViewScreen">


    <Spinner
        android:id="@+id/spinnerCarBrand"
        style="@style/CustomTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="170dp"
        android:hint="@string/select_car_brand" />

    <EditText
        android:id="@+id/editTextCarModel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/spinnerCarBrand"
        android:layout_marginStart="250dp"
        android:layout_marginTop="160dp"
        android:hint="@string/enter_car_model" />

    <Button
        android:id="@+id/btnSearch"
        style="@style/CustomButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextCarModel"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="4dp"
        android:text="Apply Filter" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcViewCars"
        android:layout_width="398dp"
        android:layout_height="307dp"
        android:layout_below="@+id/btnSearch"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="50dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/adminName"
        style="@style/CustomTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="you are signed in as" />

    <Button
        android:id="@+id/btnAdd"
        style="@style/CustomButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rcViewCars"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:text="@string/add_car" />

    <Button
        android:id="@+id/btnUpdate"
        style="@style/CustomButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rcViewCars"
        android:layout_alignEnd="@+id/btnAdd"

        android:layout_marginTop="50dp"
        android:layout_marginEnd="-141dp"
        android:layout_marginRight="-273dp"
        android:text="Update Car" />

    <Button
        android:id="@+id/btnDelete"
        style="@style/CustomButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rcViewCars"
        android:layout_alignEnd="@+id/btnUpdate"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="-141dp"
        android:text="@string/delete_car" />


</RelativeLayout>

